<resources>
    <string name="app_name">Task3</string>
    <string name="id1">아이디</string>
    <string name="id2">아이디를 입력하세요.</string>
    <string name="pw1">비밀번호</string>
    <string name="pw2">비밀번호를 입력하세요.</string>
    <string name="name1">이름</string>
    <string name="name2">이름을 입력하세요.</string>
    <string name="bt1">로그인</string>
    <string name="bt2">회원가입</string>
    <string name="bt3">종료</string>
    <string name="back">뒤로가기</string>
</resources>